--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express-handlebars": "^5.2.1",
     "path": "^0.12.7",
     "stripe": "^8.137.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
